fibo-k8s/kubernetes/fibo-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fibo
  namespace: fibo
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: client
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: server
              servicePort: 5000
